@@ -1,0 +1,6 @@
+ * Dynamically change Algorithm and Key Derivation Function in settings
+ * Upgrade translations
+ * New red volcano theme, fix classic dark theme
+ * Add Material Icon Pack to the Free version
+ * Update fingerprint state with checkbox
+ * Fix bugs / crash in beta10 version
